2004-12-19  Karl Runge <runge@karlrunge.com>
	* cleanup putenv, snprint, other string manip.
	* add -sync mode to remote control for better control
	* allow -remote and -query at same time.

2004-12-16  Karl Runge <runge@karlrunge.com>
	* support for XFIXES extension to show the exact cursor shape,
	  working on Linux/Xorg and Solaris 10.  disable with -noxfixes
	* remote control mania - nearly everything can be changed dynamically!
	  see the -remote/-query (aka -R/-Q) options. e.g. -R scale:5/6
	* simple gui tkx11vnc based on the remote control mechanism, see -gui
	* support for XRANDR extension, if the X screen changes size (see
	  xrandr(1)), x11vnc will resize the fb. Pays to have NewFBSize viewer 
	* -overlay support on IRIX with XReadDisplay (not tested).
	* RFB_MODE is set to "accept" or "gone" in environment
	* "-id pick" will let you pick the window (calls xwininfo(1)...)
	* "-pointer_mode n" replaces -old_pointer (n=1) and -old_pointer2 (n=2)
	  a new mode n=3 is added (similary to nodragging, but dynamic).
	* "-sb n" screen blank timeout option is now documented.
	* renamed NON_CVS to OLD_TREE

2004-08-31  Karl Runge <runge@karlrunge.com>
	* new check_user_input() pointer input algorithm, it tries to avoid
	  extra-draws. still needs tuning, get previous one with -old_pointer2
	* add NON_CVS macro for building in older CVS trees.

2004-08-29  Karl Runge <runge@karlrunge.com>
	* remove old mouse patch code, now use rfbSetCursor (+ workarounds)
	* changed cursor shape options (no more -mouse, ...) to '-cursor mode'
	  where 'mode' can be empty "X", "some", or "most".  "some" adds
	  heuristics for two more cursors.
	* -nocursorshape added.
	* ifdef checks for XSHM and XTEST.  Add *_wr wrappers as well.
	* -vncconnect is now the default.

2004-08-15  Karl Runge <runge@karlrunge.com>
	* -overlay option to fix color problems on Sun machines with 8+24
	  and 24+8 overlay visuals, uses Solaris XReadScreen().