@@ -2,7 +2,7 @@
 .TH X11VNC "1" "December 2004" "x11vnc " "User Commands"
 .SH NAME
 x11vnc - allow VNC connections to real X11 displays
-         version: 0.7pre, lastmod: 2004-12-20
+         version: 0.7pre, lastmod: 2004-12-23
 .SH SYNOPSIS
 .B x11vnc
 [OPTION]...
