@@ -1,3 +1,7 @@
+2004-12-22  Karl Runge <runge@karlrunge.com>
+	* final polishing for 0.7 release, tkx11vnc tweaks
+	* more careful rfbPE in pick_window, start check_user_input4()
+
 2004-12-19  Karl Runge <runge@karlrunge.com>
 	* cleanup putenv, snprint, other string manip.
 	* add -sync mode to remote control for better control
